[package]
name = "geocode-download"
version = "0.1.1"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["blocking", "json"] }
structopt = "0.3"
serde_json = "1.0"
dotenv = "0.15.0"
